fix errors and height cropper

--- a/src/app/shared/components/image-cropper-modal/image-cropper-modal.component.scss
+++ b/src/app/shared/components/image-cropper-modal/image-cropper-modal.component.scss
@@ -8,3 +8,6 @@ small.warning {
   color: red;
   font-size: 10px;
 }
+.image-cropper-wrapper {
+  height:84vh;
+}
